# Qlunee_code

./: .env.example  CLAUDE.md  Qlunee_first.py  README.md  example.md  main.py  pyproject.toml  todo.md
.tasks/: task_1.json  task_2.json  task_3.json
.team/: config.json
.transcripts/: transcript_1776247025.jsonl  transcript_1776247222.jsonl  transcript_1776247254.jsonl  transcript_1776592128.jsonl  transcript_1776592189.jsonl  transcript_1776592214.jsonl  transcript_1776592228.jsonl  transcript_1776592336.jsonl  transcript_1776592404.jsonl  transcript_1776592436.jsonl  transcript_1776592475.jsonl  transcript_1776592507.jsonl
agents/: hello_team.py
agents/v01-agent_loop/: agent_loop.py
agents/v03-todo_write/: todo_write.py
agents/v04-subagent/: tools.py
agents/v05-skill/: skill.py  skill_pdf.py
agents/v06-context_compact/: contect_compact.py
agents/v07-task_system/: task_system.py
agents/v11-autonomous_agents/: autonomous_agents.py
agents_versions/.tasks/: task_1.json  task_2.json  task_3.json  task_4.json  task_5.json  task_6.json
agents_versions/.transcripts/: transcript_1776246442.jsonl  transcript_1776247053.jsonl  transcript_1776247398.jsonl
agents_versions/.worktrees/: events.jsonl  index.json
agents_versions/agents/: system_ok.txt
backend/agent/: agent.py  server.py
backend/data/: hello.py  tasks.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  style.css
mypackage/: __init__.py  utils.py
mypackage/tests/: test_utils.py
skills/: SKILL.md
(+30 files in other folders)
